fix(*): fix search filter icons not middle aligned

--- a/src/pages/discussion/discussions/DiscussionsPage.module.less
+++ b/src/pages/discussion/discussions/DiscussionsPage.module.less
@@ -46,6 +46,7 @@
   .searchMenuItem {
     height: 40px !important;
     width: 40px !important;
+    place-content: center;
 
     > :global(.icon) {
       opacity: 0.5 !important;
