--- a/src/pages/problem/problem-set/ProblemSetPage.module.less
+++ b/src/pages/problem/problem-set/ProblemSetPage.module.less
@@ -36,6 +36,7 @@
   .searchMenuItem {
     height: 40px !important;
     width: 40px !important;
+    place-content: center;
 
     > :global(.icon) {
       opacity: 0.5 !important;
